fix image gallery pswp_scroll_wrap max-width issue

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -124,7 +124,10 @@
     white-space: pre;
   }
 }
-
+.pswp__scroll-wrap
+{
+max-width:100% !important;
+}
 @layer components {
   .display-none {
     @apply hidden;
@@ -132,9 +135,6 @@
   .focus-outline {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
-  .pswp__scroll-wrap
-   {
-  max-width:100%;
-  }
+
 
 }
